--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <ul id="quote-ul">
+    
+    </ul>
   </div>
-  <script src="src/index.js"></script>
+  <script defer src="src/index.js"></script>
 </body>
 </html>
